# VibeFont

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/glyph-recipes/: SKILL.md
.claude/skills/make-font/: SKILL.md
scripts/: lerp_gothic.py
src/vibefont/: __init__.py  build.py  cli.py  derive.py  recipes.py  render.py  segment.py  trace.py
tests/: test_pipeline.py  test_toolchain.py
